zipcode changed to pincode

--- a/app/views/configurators/angular_views/_add_zone.html
+++ b/app/views/configurators/angular_views/_add_zone.html
@@ -81,7 +81,7 @@
                         <th>Zone Name</th>
                         <!-- <th>Latitude</th>
                         <th>Longitude</th> -->
-                        <th>Zipcode</th>
+                        <th>Pincode</th>
                     </tr>
                 </thead>
                 <tbody class="pop-table-body">
