drop n pick updated in trips

--- a/app/views/trips/employer/_adhoc_trips.html.slim
+++ b/app/views/trips/employer/_adhoc_trips.html.slim
@@ -17,9 +17,9 @@
         li.filter-block
           select#change-request-direction.form-control.selectboxit[placeholder="DIRECTION" name="change-request-direction"]
             option[value="0"]
-              | Check IN
+              | Pick Up
             option[value="1"]
-              | Check OUT
+              | Drop Off
         li.filter-block
           input#change-request-value[class="form-control" type="text" name="searchName" value="" placeholder="Employee Name" style="width:200px"]
           a#change-request-search.btn.btn-sm href="#" style="color:black; margin-left:10px; border:1px solid #E0E4E8; height:30px"
