--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -170,7 +170,7 @@
               <tr ng-class="{'panic':roster.trip_is_panic}" ng-repeat="roster in rosters  | filter :{current_status:search} track by $index">
                 <td> {{$index+1}}</td>
                 <td>
-                  <a href="">{{roster.trip_type}}</a>
+                   <a href="">{{roster.trip_type == 'Check In' ? 'Pick Up' : 'Drop Off'}}</a>
                 </td>
                 <td>{{roster.shift_time}}</td>
                 <td>{{roster.vehicle_type}}</td>
