--- a/app/views/trips/index.html.slim
+++ b/app/views/trips/index.html.slim
@@ -10,6 +10,7 @@
           li
             a[href="#operator-trip-board" data-toggle="tab"]
               | Trip Board
+        - if !current_user.ct_manager?    
           li
             a[href="#employee-change-request" data-toggle="tab"]
               | Requests
@@ -19,7 +20,12 @@
           li
             a[href="#routing-testing" data-toggle="tab"]
               | Routing
-
+          li
+            a[href="#trips-notifications" data-toggle="tab"]
+              span.hidden.center[style="margin-bottom: 2px;" class="badge badge-danger" id="badge-unresolved-notification"]
+              |  Status
+              sup#new-notification.hidden
+                | *New      
           .nav-actions
             a#export-clusters.hidden.btn.btn-sm.btn-default[type="button"]
               | Export Clusters
