routing on or off duty issue resolved

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -504,7 +504,7 @@
                 </span>
 
                 <div class="inner-text">
-                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> (On Duty) </i></div>
+                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i> ({{selected_vehicle_status.toUpperCase().replace('_',' ')}}) </i></div>
                   <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
                 </div>
 
