pick drop change in trip

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -146,7 +146,7 @@
                   <a href="" ng-click="showPopupWindow(roster)">{{roster.name}}</a>
                 </th>
                 <td>{{roster.start_time}}</td>
-                <td>{{roster.shift_type == 'Check In' ? 'Pick Up' : 'Drop Off'}}</td>
+                <td>{{roster.shift_type}}</td>
                 <td>
                   <a href="" ng-click="showPopupWindow(roster)">{{roster.no_of_emp}}</a>
                 </td>
